Hotfix heroku cannot find toList